ingress/first/backend.yaml
# ==========================================
# BACKEND DEPLOYMENT
# ==========================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: hashicorp/http-echo   # simple test server
        args:
        - "-text=Hello from Backend API!"  # ye response bhejega
        ports:
        - containerPort: 5678

---
# ==========================================
# BACKEND SERVICE
# ==========================================
apiVersion: v1
kind: Service
metadata:
  name: backend-svc              # Ingress is naam se janega
spec:
  selector:
    app: backend
  ports:
  - port: 3000                   # Service ka port
    targetPort: 5678             # Container ka actual port
